--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10019,6 +10019,10 @@ h3 {
     border-color: #dee2e6;
   }
 }
+* {
+  box-sizing: border-box;
+}
+
 html, body, main#app {
   font-family: "Nunito", sans-serif;
   height: 100%;
