--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -7,6 +7,10 @@
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 
+* {
+    box-sizing: border-box;
+}
+
 html, body, main#app {
   font-family: 'Nunito', sans-serif;
   height: 100%;
