--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10019,15 +10019,6 @@ h3 {
     border-color: #dee2e6;
   }
 }
-* {
-  box-sizing: border-box;
-}
-
-html, body, main#app {
-  font-family: "Nunito", sans-serif;
-  height: 100%;
-}
-
 @font-face {
   font-family: "bootstrap-icons";
   src: url(/fonts/vendor/bootstrap-icons/bootstrap-icons.woff2?66e4109ec6241c76fdcfff101b46ce0b) format("woff2"), url(/fonts/vendor/bootstrap-icons/bootstrap-icons.woff?ea6f3dfe4ebb15134576260fe8dbc414) format("woff");
@@ -16185,4 +16176,18 @@ html, body, main#app {
 
 .bi-terminal-x::before {
   content: "\f6ff";
+}
+
+* {
+  box-sizing: border-box;
+}
+
+html, body, main#app {
+  font-family: "Nunito", sans-serif;
+  height: 100%;
+}
+
+.form-control:focus {
+  border-color: #9561e2;
+  box-shadow: 0 0 0 0.1rem #9561e2;
 }
