--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -7,8 +7,11 @@
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 
+// Bootstrap Icons
+@import '~bootstrap-icons/font/bootstrap-icons.scss';
+
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 html, body, main#app {
@@ -16,5 +19,9 @@ html, body, main#app {
   height: 100%;
 }
 
-// Bootstrap Icons
-@import '~bootstrap-icons/font/bootstrap-icons.scss';
+.form-control {
+  &:focus {
+	border-color: #9561e2;
+    box-shadow: 0 0 0 0.1rem #9561e2;
+  }
+}
